--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -15,12 +16,15 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "^5.1.25",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "jest": "^28.1.1",
+    "ts-jest": "^28.0.4",
     "typescript": "4.7.3"
   }
 }
