--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "phosphor-react": "^1.4.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-toastify": "^9.0.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
