--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
     "phosphor-react": "^1.4.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-toastify": "^9.0.4",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
@@ -30,10 +32,12 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@types/jest": "^28.1.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.5",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
