--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@swc/core": "^1.2.204",
+    "@swc/jest": "^0.2.21",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.41",
@@ -38,11 +43,14 @@
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
+    "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "ts-jest": "^28.0.4",
+    "ts-node": "^10.8.1",
     "typescript": "4.7.3"
   }
 }
